# serializer version: 1
# name: TestEntity.test_data[datetime-event]
  dict({
    'duration': 1555199000000,
    'flag_valid': False,
    'observed_at': datetime.datetime(2018, 4, 9, 7, 47, 28),
    'response_time': None,
    'status': 'warn',
    'token_emb': list([
      0.21517498791217804,
      0.7250058054924011,
      0.11800876259803772,
      0.4190748631954193,
      0.8283944129943848,
      0.05677023530006409,
      0.8460885286331177,
      0.6321725249290466,
      0.08643732219934464,
      0.14889347553253174,
      0.327852338552475,
      0.3891068696975708,
      0.16577284038066864,
      0.9552331566810608,
      0.19789749383926392,
      0.9073485732078552,
      0.16557493805885315,
      0.8588067889213562,
      0.2622232735157013,
      0.16449344158172607,
      0.20772530138492584,
      0.626502275466919,
      0.34898507595062256,
      0.6360644102096558,
      0.3072379231452942,
      0.9220066666603088,
      0.8158417344093323,
      0.6880675554275513,
      0.624621570110321,
      0.6983563899993896,
      0.3226199448108673,
      0.2487940937280655,
    ]),
    'value': 0.5417115616718876,
  })
# ---
# name: TestEntity.test_data[datetime-interval]
  dict({
    'duration': 1555199000000,
    'flag_valid': False,
    'observed_at': datetime.datetime(2018, 4, 9, 7, 47, 28),
    'response_time': None,
    'status': 'warn',
    'token_emb': list([
      0.21517498791217804,
      0.7250058054924011,
      0.11800876259803772,
      0.4190748631954193,
      0.8283944129943848,
      0.05677023530006409,
      0.8460885286331177,
      0.6321725249290466,
      0.08643732219934464,
      0.14889347553253174,
      0.327852338552475,
      0.3891068696975708,
      0.16577284038066864,
      0.9552331566810608,
      0.19789749383926392,
      0.9073485732078552,
      0.16557493805885315,
      0.8588067889213562,
      0.2622232735157013,
      0.16449344158172607,
      0.20772530138492584,
      0.626502275466919,
      0.34898507595062256,
      0.6360644102096558,
      0.3072379231452942,
      0.9220066666603088,
      0.8158417344093323,
      0.6880675554275513,
      0.624621570110321,
      0.6983563899993896,
      0.3226199448108673,
      0.2487940937280655,
    ]),
    'value': 0.5417115616718876,
  })
# ---
# name: TestEntity.test_data[datetime-state]
  dict({
    'duration': 1555199000000,
    'flag_valid': False,
    'observed_at': datetime.datetime(2018, 4, 9, 7, 47, 28),
    'response_time': None,
    'status': 'warn',
    'token_emb': list([
      0.21517498791217804,
      0.7250058054924011,
      0.11800876259803772,
      0.4190748631954193,
      0.8283944129943848,
      0.05677023530006409,
      0.8460885286331177,
      0.6321725249290466,
      0.08643732219934464,
      0.14889347553253174,
      0.327852338552475,
      0.3891068696975708,
      0.16577284038066864,
      0.9552331566810608,
      0.19789749383926392,
      0.9073485732078552,
      0.16557493805885315,
      0.8588067889213562,
      0.2622232735157013,
      0.16449344158172607,
      0.20772530138492584,
      0.626502275466919,
      0.34898507595062256,
      0.6360644102096558,
      0.3072379231452942,
      0.9220066666603088,
      0.8158417344093323,
      0.6880675554275513,
      0.624621570110321,
      0.6983563899993896,
      0.3226199448108673,
      0.2487940937280655,
    ]),
    'value': 0.5417115616718876,
  })
# ---
# name: TestEntity.test_data[timestep-event]
  dict({
    'duration': 17.99998842592595,
    'flag_valid': False,
    'response_time': None,
    'status': 'pending',
    'token_emb': list([
      0.7647659182548523,
      0.5271198153495789,
      0.4364011585712433,
      0.8687036037445068,
      0.6149173378944397,
      0.6770655512809753,
      0.6413901448249817,
      0.6032724380493164,
      0.6696439981460571,
      0.1762336641550064,
      0.8422462940216064,
      0.9917035698890686,
      0.5453288555145264,
      0.7191165685653687,
      0.4661622643470764,
      0.3677823543548584,
      0.6097777485847473,
      0.24798862636089325,
      0.6750134825706482,
      0.894059956073761,
      0.8012292385101318,
      0.5204984545707703,
      0.5101312398910522,
      0.8727294206619263,
      0.7468551993370056,
      0.9966646432876587,
      0.4707702696323395,
      0.13563081622123718,
      0.8460367918014526,
      0.37015897035598755,
      0.9742684960365295,
      0.1264638751745224,
    ]),
    'value': -1.463385798550521,
  })
# ---
# name: TestEntity.test_data[timestep-interval]
  dict({
    'duration': 17.99998842592595,
    'flag_valid': False,
    'response_time': None,
    'status': 'pending',
    'token_emb': list([
      0.7647659182548523,
      0.5271198153495789,
      0.4364011585712433,
      0.8687036037445068,
      0.6149173378944397,
      0.6770655512809753,
      0.6413901448249817,
      0.6032724380493164,
      0.6696439981460571,
      0.1762336641550064,
      0.8422462940216064,
      0.9917035698890686,
      0.5453288555145264,
      0.7191165685653687,
      0.4661622643470764,
      0.3677823543548584,
      0.6097777485847473,
      0.24798862636089325,
      0.6750134825706482,
      0.894059956073761,
      0.8012292385101318,
      0.5204984545707703,
      0.5101312398910522,
      0.8727294206619263,
      0.7468551993370056,
      0.9966646432876587,
      0.4707702696323395,
      0.13563081622123718,
      0.8460367918014526,
      0.37015897035598755,
      0.9742684960365295,
      0.1264638751745224,
    ]),
    'value': -1.463385798550521,
  })
# ---
# name: TestEntity.test_data[timestep-state]
  dict({
    'duration': 17.99998842592595,
    'flag_valid': False,
    'response_time': None,
    'status': 'pending',
    'token_emb': list([
      0.7647659182548523,
      0.5271198153495789,
      0.4364011585712433,
      0.8687036037445068,
      0.6149173378944397,
      0.6770655512809753,
      0.6413901448249817,
      0.6032724380493164,
      0.6696439981460571,
      0.1762336641550064,
      0.8422462940216064,
      0.9917035698890686,
      0.5453288555145264,
      0.7191165685653687,
      0.4661622643470764,
      0.3677823543548584,
      0.6097777485847473,
      0.24798862636089325,
      0.6750134825706482,
      0.894059956073761,
      0.8012292385101318,
      0.5204984545707703,
      0.5101312398910522,
      0.8727294206619263,
      0.7468551993370056,
      0.9966646432876587,
      0.4707702696323395,
      0.13563081622123718,
      0.8460367918014526,
      0.37015897035598755,
      0.9742684960365295,
      0.1264638751745224,
    ]),
    'value': -1.463385798550521,
  })
# ---
# name: TestEntity.test_temporal_extent[datetime-event]
  datetime.datetime(2000, 10, 5, 0, 0)
# ---
# name: TestEntity.test_temporal_extent[datetime-interval]
  list([
    datetime.datetime(2000, 10, 5, 0, 0),
    datetime.datetime(2000, 10, 22, 23, 59, 59),
  ])
# ---
# name: TestEntity.test_temporal_extent[datetime-state]
  list([
    datetime.datetime(2000, 10, 5, 0, 0),
    datetime.datetime(2000, 10, 13, 0, 0),
  ])
# ---
# name: TestEntity.test_temporal_extent[timestep-event]
  278.0
# ---
# name: TestEntity.test_temporal_extent[timestep-interval]
  list([
    278.0,
    295.99998842592595,
  ])
# ---
# name: TestEntity.test_temporal_extent[timestep-state]
  list([
    278.0,
    286.0,
  ])
# ---
# name: TestSequence.test_len[datetime-event]
  8
# ---
# name: TestSequence.test_len[datetime-interval]
  8
# ---
# name: TestSequence.test_len[datetime-state]
  8
# ---
# name: TestSequence.test_len[timestep-event]
  8
# ---
# name: TestSequence.test_len[timestep-interval]
  8
# ---
# name: TestSequence.test_len[timestep-state]
  8
# ---
# name: TestSequence.test_temporal_data[datetime-event]
  shape: (8, 9)
  ┌─────────────┬────────────┬─────┬─────────────┬───┬─────────┬────────────┬────────────┬───────────┐
  │ duration    ┆ flag_valid ┆ id  ┆ observed_at ┆ … ┆ status  ┆ time       ┆ token_emb  ┆ value     │
  │ ---         ┆ ---        ┆ --- ┆ ---         ┆   ┆ ---     ┆ ---        ┆ ---        ┆ ---       │
  │ i64         ┆ bool       ┆ i64 ┆ datetime[μs ┆   ┆ str     ┆ datetime[μ ┆ array[f32, ┆ f64       │
  │             ┆            ┆     ┆ ]           ┆   ┆         ┆ s]         ┆ 32]        ┆           │
  ╞═════════════╪════════════╪═════╪═════════════╪═══╪═════════╪════════════╪════════════╪═══════════╡
  │ 15551990000 ┆ false      ┆ 1   ┆ 2018-04-09  ┆ … ┆ warn    ┆ 2000-10-05 ┆ [0.215175, ┆ 0.541712  │
  │ 00          ┆            ┆     ┆ 07:47:28    ┆   ┆         ┆ 00:00:00   ┆ 0.725006,  ┆           │
  │             ┆            ┆     ┆             ┆   ┆         ┆            ┆ … 0.24879… ┆           │
  │ 22463990000 ┆ true       ┆ 1   ┆ 2018-11-08  ┆ … ┆ pending ┆ 2000-10-13 ┆ [0.539233, ┆ -1.0729   │
  │ 00          ┆            ┆     ┆ 15:56:10    ┆   ┆         ┆ 00:00:00   ┆ 0.594354,  ┆           │
  │             ┆            ┆     ┆             ┆   ┆         ┆            ┆ … 0.02286… ┆           │
  │ 20735990000 ┆ true       ┆ 1   ┆ 2018-09-04  ┆ … ┆ error   ┆ 2000-10-25 ┆ [0.830483, ┆ -0.208379 │
  │ 00          ┆            ┆     ┆ 16:29:42    ┆   ┆         ┆ 00:00:00   ┆ 0.678199,  ┆           │
  │             ┆            ┆     ┆             ┆   ┆         ┆            ┆ … 0.29341… ┆           │
  │ 24191990000 ┆ true       ┆ 1   ┆ 2018-11-05  ┆ … ┆ ok      ┆ 2000-10-31 ┆ [0.193563, ┆ 0.169945  │
  │ 00          ┆            ┆     ┆ 11:37:04    ┆   ┆         ┆ 00:00:00   ┆ 0.382689,  ┆           │
  │             ┆            ┆     ┆             ┆   ┆         ┆            ┆ … 0.78663… ┆           │
  │ 20735990000 ┆ true       ┆ 1   ┆ 2018-09-15  ┆ … ┆ error   ┆ 2000-11-29 ┆ [0.375618, ┆ -0.73353  │
  │ 00          ┆            ┆     ┆ 14:29:26    ┆   ┆         ┆ 00:00:00   ┆ 0.210704,  ┆           │
  │             ┆            ┆     ┆             ┆   ┆         ┆            ┆ … 0.91522… ┆           │
  │ 18143990000 ┆ true       ┆ 1   ┆ 2018-03-27  ┆ … ┆ warn    ┆ 2000-12-04 ┆ [0.570386, ┆ -0.210655 │
  │ 00          ┆            ┆     ┆ 03:15:46    ┆   ┆         ┆ 00:00:00   ┆ 0.616262,  ┆           │
  │             ┆            ┆     ┆             ┆   ┆         ┆            ┆ … 0.02704… ┆           │
  │ 25055990000 ┆ true       ┆ 1   ┆ 2018-01-10  ┆ … ┆ warn    ┆ 2000-12-10 ┆ [0.722286, ┆ 0.676404  │
  │ 00          ┆            ┆     ┆ 03:01:13    ┆   ┆         ┆ 00:00:00   ┆ 0.234212,  ┆           │
  │             ┆            ┆     ┆             ┆   ┆         ┆            ┆ … 0.10777… ┆           │
  │ 24191990000 ┆ true       ┆ 1   ┆ 2018-01-26  ┆ … ┆ error   ┆ 2001-01-08 ┆ [0.585045, ┆ -1.317823 │
  │ 00          ┆            ┆     ┆ 05:48:12    ┆   ┆         ┆ 00:00:00   ┆ 0.183505,  ┆           │
  │             ┆            ┆     ┆             ┆   ┆         ┆            ┆ … 0.66307… ┆           │
  └─────────────┴────────────┴─────┴─────────────┴───┴─────────┴────────────┴────────────┴───────────┘
# ---
# name: TestSequence.test_temporal_data[datetime-interval]
  shape: (8, 10)
  ┌─────────────┬─────────────┬────────────┬─────┬───┬────────────┬─────────┬────────────┬───────────┐
  │ duration    ┆ end         ┆ flag_valid ┆ id  ┆ … ┆ start      ┆ status  ┆ token_emb  ┆ value     │
  │ ---         ┆ ---         ┆ ---        ┆ --- ┆   ┆ ---        ┆ ---     ┆ ---        ┆ ---       │
  │ i64         ┆ datetime[μs ┆ bool       ┆ i64 ┆   ┆ datetime[μ ┆ str     ┆ array[f32, ┆ f64       │
  │             ┆ ]           ┆            ┆     ┆   ┆ s]         ┆         ┆ 32]        ┆           │
  ╞═════════════╪═════════════╪════════════╪═════╪═══╪════════════╪═════════╪════════════╪═══════════╡
  │ 15551990000 ┆ 2000-10-22  ┆ false      ┆ 1   ┆ … ┆ 2000-10-05 ┆ warn    ┆ [0.215175, ┆ 0.541712  │
  │ 00          ┆ 23:59:59    ┆            ┆     ┆   ┆ 00:00:00   ┆         ┆ 0.725006,  ┆           │
  │             ┆             ┆            ┆     ┆   ┆            ┆         ┆ … 0.24879… ┆           │
  │ 22463990000 ┆ 2000-11-07  ┆ true       ┆ 1   ┆ … ┆ 2000-10-13 ┆ pending ┆ [0.539233, ┆ -1.0729   │
  │ 00          ┆ 23:59:59    ┆            ┆     ┆   ┆ 00:00:00   ┆         ┆ 0.594354,  ┆           │
  │             ┆             ┆            ┆     ┆   ┆            ┆         ┆ … 0.02286… ┆           │
  │ 20735990000 ┆ 2000-11-17  ┆ true       ┆ 1   ┆ … ┆ 2000-10-25 ┆ error   ┆ [0.830483, ┆ -0.208379 │
  │ 00          ┆ 23:59:59    ┆            ┆     ┆   ┆ 00:00:00   ┆         ┆ 0.678199,  ┆           │
  │             ┆             ┆            ┆     ┆   ┆            ┆         ┆ … 0.29341… ┆           │
  │ 24191990000 ┆ 2000-11-27  ┆ true       ┆ 1   ┆ … ┆ 2000-10-31 ┆ ok      ┆ [0.193563, ┆ 0.169945  │
  │ 00          ┆ 23:59:59    ┆            ┆     ┆   ┆ 00:00:00   ┆         ┆ 0.382689,  ┆           │
  │             ┆             ┆            ┆     ┆   ┆            ┆         ┆ … 0.78663… ┆           │
  │ 20735990000 ┆ 2000-12-22  ┆ true       ┆ 1   ┆ … ┆ 2000-11-29 ┆ error   ┆ [0.375618, ┆ -0.73353  │
  │ 00          ┆ 23:59:59    ┆            ┆     ┆   ┆ 00:00:00   ┆         ┆ 0.210704,  ┆           │
  │             ┆             ┆            ┆     ┆   ┆            ┆         ┆ … 0.91522… ┆           │
  │ 18143990000 ┆ 2000-12-24  ┆ true       ┆ 1   ┆ … ┆ 2000-12-04 ┆ warn    ┆ [0.570386, ┆ -0.210655 │
  │ 00          ┆ 23:59:59    ┆            ┆     ┆   ┆ 00:00:00   ┆         ┆ 0.616262,  ┆           │
  │             ┆             ┆            ┆     ┆   ┆            ┆         ┆ … 0.02704… ┆           │
  │ 25055990000 ┆ 2001-01-07  ┆ true       ┆ 1   ┆ … ┆ 2000-12-10 ┆ warn    ┆ [0.722286, ┆ 0.676404  │
  │ 00          ┆ 23:59:59    ┆            ┆     ┆   ┆ 00:00:00   ┆         ┆ 0.234212,  ┆           │
  │             ┆             ┆            ┆     ┆   ┆            ┆         ┆ … 0.10777… ┆           │
  │ 24191990000 ┆ 2001-02-04  ┆ true       ┆ 1   ┆ … ┆ 2001-01-08 ┆ error   ┆ [0.585045, ┆ -1.317823 │
  │ 00          ┆ 23:59:59    ┆            ┆     ┆   ┆ 00:00:00   ┆         ┆ 0.183505,  ┆           │
  │             ┆             ┆            ┆     ┆   ┆            ┆         ┆ … 0.66307… ┆           │
  └─────────────┴─────────────┴────────────┴─────┴───┴────────────┴─────────┴────────────┴───────────┘
# ---
# name: TestSequence.test_temporal_data[datetime-state]
  shape: (8, 10)
  ┌─────────────┬─────────────┬────────────┬─────┬───┬────────────┬─────────┬────────────┬───────────┐
  │ duration    ┆ end         ┆ flag_valid ┆ id  ┆ … ┆ start      ┆ status  ┆ token_emb  ┆ value     │
  │ ---         ┆ ---         ┆ ---        ┆ --- ┆   ┆ ---        ┆ ---     ┆ ---        ┆ ---       │
  │ i64         ┆ datetime[μs ┆ bool       ┆ i64 ┆   ┆ datetime[μ ┆ str     ┆ array[f32, ┆ f64       │
  │             ┆ ]           ┆            ┆     ┆   ┆ s]         ┆         ┆ 32]        ┆           │
  ╞═════════════╪═════════════╪════════════╪═════╪═══╪════════════╪═════════╪════════════╪═══════════╡
  │ 15551990000 ┆ 2000-10-13  ┆ false      ┆ 1   ┆ … ┆ 2000-10-05 ┆ warn    ┆ [0.215175, ┆ 0.541712  │
  │ 00          ┆ 00:00:00    ┆            ┆     ┆   ┆ 00:00:00   ┆         ┆ 0.725006,  ┆           │
  │             ┆             ┆            ┆     ┆   ┆            ┆         ┆ … 0.24879… ┆           │
  │ 22463990000 ┆ 2000-10-25  ┆ true       ┆ 1   ┆ … ┆ 2000-10-13 ┆ pending ┆ [0.539233, ┆ -1.0729   │
  │ 00          ┆ 00:00:00    ┆            ┆     ┆   ┆ 00:00:00   ┆         ┆ 0.594354,  ┆           │
  │             ┆             ┆            ┆     ┆   ┆            ┆         ┆ … 0.02286… ┆           │
  │ 20735990000 ┆ 2000-10-31  ┆ true       ┆ 1   ┆ … ┆ 2000-10-25 ┆ error   ┆ [0.830483, ┆ -0.208379 │
  │ 00          ┆ 00:00:00    ┆            ┆     ┆   ┆ 00:00:00   ┆         ┆ 0.678199,  ┆           │
  │             ┆             ┆            ┆     ┆   ┆            ┆         ┆ … 0.29341… ┆           │
  │ 24191990000 ┆ 2000-11-29  ┆ true       ┆ 1   ┆ … ┆ 2000-10-31 ┆ ok      ┆ [0.193563, ┆ 0.169945  │
  │ 00          ┆ 00:00:00    ┆            ┆     ┆   ┆ 00:00:00   ┆         ┆ 0.382689,  ┆           │
  │             ┆             ┆            ┆     ┆   ┆            ┆         ┆ … 0.78663… ┆           │
  │ 20735990000 ┆ 2000-12-04  ┆ true       ┆ 1   ┆ … ┆ 2000-11-29 ┆ error   ┆ [0.375618, ┆ -0.73353  │
  │ 00          ┆ 00:00:00    ┆            ┆     ┆   ┆ 00:00:00   ┆         ┆ 0.210704,  ┆           │
  │             ┆             ┆            ┆     ┆   ┆            ┆         ┆ … 0.91522… ┆           │
  │ 18143990000 ┆ 2000-12-10  ┆ true       ┆ 1   ┆ … ┆ 2000-12-04 ┆ warn    ┆ [0.570386, ┆ -0.210655 │
  │ 00          ┆ 00:00:00    ┆            ┆     ┆   ┆ 00:00:00   ┆         ┆ 0.616262,  ┆           │
  │             ┆             ┆            ┆     ┆   ┆            ┆         ┆ … 0.02704… ┆           │
  │ 25055990000 ┆ 2001-01-08  ┆ true       ┆ 1   ┆ … ┆ 2000-12-10 ┆ warn    ┆ [0.722286, ┆ 0.676404  │
  │ 00          ┆ 00:00:00    ┆            ┆     ┆   ┆ 00:00:00   ┆         ┆ 0.234212,  ┆           │
  │             ┆             ┆            ┆     ┆   ┆            ┆         ┆ … 0.10777… ┆           │
  │ 24191990000 ┆ null        ┆ true       ┆ 1   ┆ … ┆ 2001-01-08 ┆ error   ┆ [0.585045, ┆ -1.317823 │
  │ 00          ┆             ┆            ┆     ┆   ┆ 00:00:00   ┆         ┆ 0.183505,  ┆           │
  │             ┆             ┆            ┆     ┆   ┆            ┆         ┆ … 0.66307… ┆           │
  └─────────────┴─────────────┴────────────┴─────┴───┴────────────┴─────────┴────────────┴───────────┘
# ---
# name: TestSequence.test_temporal_data[timestep-event]
  shape: (8, 8)
  ┌───────────┬────────────┬─────┬───────────────┬─────────┬───────┬─────────────────────┬───────────┐
  │ duration  ┆ flag_valid ┆ id  ┆ response_time ┆ status  ┆ time  ┆ token_emb           ┆ value     │
  │ ---       ┆ ---        ┆ --- ┆ ---           ┆ ---     ┆ ---   ┆ ---                 ┆ ---       │
  │ f64       ┆ bool       ┆ i64 ┆ i64           ┆ str     ┆ f64   ┆ array[f32, 32]      ┆ f64       │
  ╞═══════════╪════════════╪═════╪═══════════════╪═════════╪═══════╪═════════════════════╪═══════════╡
  │ 17.999988 ┆ false      ┆ 1   ┆ null          ┆ pending ┆ 278.0 ┆ [0.764766, 0.52712, ┆ -1.463386 │
  │           ┆            ┆     ┆               ┆         ┆       ┆ … 0.126464…         ┆           │
  │ 25.999988 ┆ true       ┆ 1   ┆ null          ┆ pending ┆ 286.0 ┆ [0.356086, 0.61515, ┆ 1.645544  │
  │           ┆            ┆     ┆               ┆         ┆       ┆ … 0.074617…         ┆           │
  │ 23.999988 ┆ true       ┆ 1   ┆ null          ┆ warn    ┆ 298.0 ┆ [0.45854, 0.092267, ┆ -0.569401 │
  │           ┆            ┆     ┆               ┆         ┆       ┆ … 0.230326…         ┆           │
  │ 27.999988 ┆ true       ┆ 1   ┆ null          ┆ pending ┆ 304.0 ┆ [0.951114,          ┆ 0.199385  │
  │           ┆            ┆     ┆               ┆         ┆       ┆ 0.319548, …         ┆           │
  │           ┆            ┆     ┆               ┆         ┆       ┆ 0.13458…            ┆           │
  │ 23.999988 ┆ true       ┆ 1   ┆ null          ┆ pending ┆ 333.0 ┆ [0.333197, 0.48291, ┆ 0.248016  │
  │           ┆            ┆     ┆               ┆         ┆       ┆ … 0.918873…         ┆           │
  │ 20.999988 ┆ true       ┆ 1   ┆ null          ┆ warn    ┆ 338.0 ┆ [0.062638,          ┆ 0.041294  │
  │           ┆            ┆     ┆               ┆         ┆       ┆ 0.124422, …         ┆           │
  │           ┆            ┆     ┆               ┆         ┆       ┆ 0.87622…            ┆           │
  │ 28.999988 ┆ false      ┆ 1   ┆ null          ┆ error   ┆ 344.0 ┆ [0.676314,          ┆ 0.430945  │
  │           ┆            ┆     ┆               ┆         ┆       ┆ 0.504547, …         ┆           │
  │           ┆            ┆     ┆               ┆         ┆       ┆ 0.43409…            ┆           │
  │ 27.999988 ┆ true       ┆ 1   ┆ null          ┆ ok      ┆ 373.0 ┆ [0.956934,          ┆ -0.882414 │
  │           ┆            ┆     ┆               ┆         ┆       ┆ 0.362068, …         ┆           │
  │           ┆            ┆     ┆               ┆         ┆       ┆ 0.59380…            ┆           │
  └───────────┴────────────┴─────┴───────────────┴─────────┴───────┴─────────────────────┴───────────┘
# ---
# name: TestSequence.test_temporal_data[timestep-interval]
  shape: (8, 9)
  ┌───────────┬────────────┬────────────┬─────┬───┬───────┬─────────┬────────────────┬───────────┐
  │ duration  ┆ end        ┆ flag_valid ┆ id  ┆ … ┆ start ┆ status  ┆ token_emb      ┆ value     │
  │ ---       ┆ ---        ┆ ---        ┆ --- ┆   ┆ ---   ┆ ---     ┆ ---            ┆ ---       │
  │ f64       ┆ f64        ┆ bool       ┆ i64 ┆   ┆ f64   ┆ str     ┆ array[f32, 32] ┆ f64       │
  ╞═══════════╪════════════╪════════════╪═════╪═══╪═══════╪═════════╪════════════════╪═══════════╡
  │ 17.999988 ┆ 295.999988 ┆ false      ┆ 1   ┆ … ┆ 278.0 ┆ pending ┆ [0.764766,     ┆ -1.463386 │
  │           ┆            ┆            ┆     ┆   ┆       ┆         ┆ 0.52712, …     ┆           │
  │           ┆            ┆            ┆     ┆   ┆       ┆         ┆ 0.126464…      ┆           │
  │ 25.999988 ┆ 311.999988 ┆ true       ┆ 1   ┆ … ┆ 286.0 ┆ pending ┆ [0.356086,     ┆ 1.645544  │
  │           ┆            ┆            ┆     ┆   ┆       ┆         ┆ 0.61515, …     ┆           │
  │           ┆            ┆            ┆     ┆   ┆       ┆         ┆ 0.074617…      ┆           │
  │ 23.999988 ┆ 321.999988 ┆ true       ┆ 1   ┆ … ┆ 298.0 ┆ warn    ┆ [0.45854,      ┆ -0.569401 │
  │           ┆            ┆            ┆     ┆   ┆       ┆         ┆ 0.092267, …    ┆           │
  │           ┆            ┆            ┆     ┆   ┆       ┆         ┆ 0.230326…      ┆           │
  │ 27.999988 ┆ 331.999988 ┆ true       ┆ 1   ┆ … ┆ 304.0 ┆ pending ┆ [0.951114,     ┆ 0.199385  │
  │           ┆            ┆            ┆     ┆   ┆       ┆         ┆ 0.319548, …    ┆           │
  │           ┆            ┆            ┆     ┆   ┆       ┆         ┆ 0.13458…       ┆           │
  │ 23.999988 ┆ 356.999988 ┆ true       ┆ 1   ┆ … ┆ 333.0 ┆ pending ┆ [0.333197,     ┆ 0.248016  │
  │           ┆            ┆            ┆     ┆   ┆       ┆         ┆ 0.48291, …     ┆           │
  │           ┆            ┆            ┆     ┆   ┆       ┆         ┆ 0.918873…      ┆           │
  │ 20.999988 ┆ 358.999988 ┆ true       ┆ 1   ┆ … ┆ 338.0 ┆ warn    ┆ [0.062638,     ┆ 0.041294  │
  │           ┆            ┆            ┆     ┆   ┆       ┆         ┆ 0.124422, …    ┆           │
  │           ┆            ┆            ┆     ┆   ┆       ┆         ┆ 0.87622…       ┆           │
  │ 28.999988 ┆ 372.999988 ┆ false      ┆ 1   ┆ … ┆ 344.0 ┆ error   ┆ [0.676314,     ┆ 0.430945  │
  │           ┆            ┆            ┆     ┆   ┆       ┆         ┆ 0.504547, …    ┆           │
  │           ┆            ┆            ┆     ┆   ┆       ┆         ┆ 0.43409…       ┆           │
  │ 27.999988 ┆ 400.999988 ┆ true       ┆ 1   ┆ … ┆ 373.0 ┆ ok      ┆ [0.956934,     ┆ -0.882414 │
  │           ┆            ┆            ┆     ┆   ┆       ┆         ┆ 0.362068, …    ┆           │
  │           ┆            ┆            ┆     ┆   ┆       ┆         ┆ 0.59380…       ┆           │
  └───────────┴────────────┴────────────┴─────┴───┴───────┴─────────┴────────────────┴───────────┘
# ---
# name: TestSequence.test_temporal_data[timestep-state]
  shape: (8, 9)
  ┌───────────┬───────┬────────────┬─────┬───┬───────┬─────────┬─────────────────────────┬───────────┐
  │ duration  ┆ end   ┆ flag_valid ┆ id  ┆ … ┆ start ┆ status  ┆ token_emb               ┆ value     │
  │ ---       ┆ ---   ┆ ---        ┆ --- ┆   ┆ ---   ┆ ---     ┆ ---                     ┆ ---       │
  │ f64       ┆ f64   ┆ bool       ┆ i64 ┆   ┆ f64   ┆ str     ┆ array[f32, 32]          ┆ f64       │
  ╞═══════════╪═══════╪════════════╪═════╪═══╪═══════╪═════════╪═════════════════════════╪═══════════╡
  │ 17.999988 ┆ 286.0 ┆ false      ┆ 1   ┆ … ┆ 278.0 ┆ pending ┆ [0.764766, 0.52712, …   ┆ -1.463386 │
  │           ┆       ┆            ┆     ┆   ┆       ┆         ┆ 0.126464…               ┆           │
  │ 25.999988 ┆ 298.0 ┆ true       ┆ 1   ┆ … ┆ 286.0 ┆ pending ┆ [0.356086, 0.61515, …   ┆ 1.645544  │
  │           ┆       ┆            ┆     ┆   ┆       ┆         ┆ 0.074617…               ┆           │
  │ 23.999988 ┆ 304.0 ┆ true       ┆ 1   ┆ … ┆ 298.0 ┆ warn    ┆ [0.45854, 0.092267, …   ┆ -0.569401 │
  │           ┆       ┆            ┆     ┆   ┆       ┆         ┆ 0.230326…               ┆           │
  │ 27.999988 ┆ 333.0 ┆ true       ┆ 1   ┆ … ┆ 304.0 ┆ pending ┆ [0.951114, 0.319548, …  ┆ 0.199385  │
  │           ┆       ┆            ┆     ┆   ┆       ┆         ┆ 0.13458…                ┆           │
  │ 23.999988 ┆ 338.0 ┆ true       ┆ 1   ┆ … ┆ 333.0 ┆ pending ┆ [0.333197, 0.48291, …   ┆ 0.248016  │
  │           ┆       ┆            ┆     ┆   ┆       ┆         ┆ 0.918873…               ┆           │
  │ 20.999988 ┆ 344.0 ┆ true       ┆ 1   ┆ … ┆ 338.0 ┆ warn    ┆ [0.062638, 0.124422, …  ┆ 0.041294  │
  │           ┆       ┆            ┆     ┆   ┆       ┆         ┆ 0.87622…                ┆           │
  │ 28.999988 ┆ 373.0 ┆ false      ┆ 1   ┆ … ┆ 344.0 ┆ error   ┆ [0.676314, 0.504547, …  ┆ 0.430945  │
  │           ┆       ┆            ┆     ┆   ┆       ┆         ┆ 0.43409…                ┆           │
  │ 27.999988 ┆ null  ┆ true       ┆ 1   ┆ … ┆ 373.0 ┆ ok      ┆ [0.956934, 0.362068, …  ┆ -0.882414 │
  │           ┆       ┆            ┆     ┆   ┆       ┆         ┆ 0.59380…                ┆           │
  └───────────┴───────┴────────────┴─────┴───┴───────┴─────────┴─────────────────────────┴───────────┘
# ---
# name: TestSequencePool.test_len[datetime-event]
  60
# ---
# name: TestSequencePool.test_len[datetime-interval]
  60
# ---
# name: TestSequencePool.test_len[datetime-state]
  60
# ---
# name: TestSequencePool.test_len[timestep-event]
  60
# ---
# name: TestSequencePool.test_len[timestep-interval]
  60
# ---
# name: TestSequencePool.test_len[timestep-state]
  60
# ---
# name: TestSequencePool.test_temporal_data_schema[datetime-event]
  dict({
    'duration': Int64,
    'flag_valid': Boolean,
    'id': Int64,
    'observed_at': Datetime(time_unit='us', time_zone=None),
    'response_time': Int64,
    'status': String,
    'time': Datetime(time_unit='us', time_zone=None),
    'token_emb': Array(Float32, shape=(32,)),
    'value': Float64,
  })
# ---
# name: TestSequencePool.test_temporal_data_schema[datetime-interval]
  dict({
    'duration': Int64,
    'end': Datetime(time_unit='us', time_zone=None),
    'flag_valid': Boolean,
    'id': Int64,
    'observed_at': Datetime(time_unit='us', time_zone=None),
    'response_time': Int64,
    'start': Datetime(time_unit='us', time_zone=None),
    'status': String,
    'token_emb': Array(Float32, shape=(32,)),
    'value': Float64,
  })
# ---
# name: TestSequencePool.test_temporal_data_schema[datetime-state]
  dict({
    'duration': Int64,
    'end': Datetime(time_unit='us', time_zone=None),
    'flag_valid': Boolean,
    'id': Int64,
    'observed_at': Datetime(time_unit='us', time_zone=None),
    'response_time': Int64,
    'start': Datetime(time_unit='us', time_zone=None),
    'status': String,
    'token_emb': Array(Float32, shape=(32,)),
    'value': Float64,
  })
# ---
# name: TestSequencePool.test_temporal_data_schema[timestep-event]
  dict({
    'duration': Float64,
    'flag_valid': Boolean,
    'id': Int64,
    'response_time': Int64,
    'status': String,
    'time': Float64,
    'token_emb': Array(Float32, shape=(32,)),
    'value': Float64,
  })
# ---
# name: TestSequencePool.test_temporal_data_schema[timestep-interval]
  dict({
    'duration': Float64,
    'end': Float64,
    'flag_valid': Boolean,
    'id': Int64,
    'response_time': Int64,
    'start': Float64,
    'status': String,
    'token_emb': Array(Float32, shape=(32,)),
    'value': Float64,
  })
# ---
# name: TestSequencePool.test_temporal_data_schema[timestep-state]
  dict({
    'duration': Float64,
    'end': Float64,
    'flag_valid': Boolean,
    'id': Int64,
    'response_time': Int64,
    'start': Float64,
    'status': String,
    'token_emb': Array(Float32, shape=(32,)),
    'value': Float64,
  })
# ---
# name: TestSequencePool.test_static_data_schema[datetime-event]
  dict({
    'age': Int64,
    'group': String,
    'id': Int64,
    'is_active': Boolean,
    'membership_duration': Int64,
    'summary_embedding': Array(Float32, shape=(128,)),
  })
# ---
# name: TestSequencePool.test_static_data_schema[datetime-interval]
  dict({
    'age': Int64,
    'group': String,
    'id': Int64,
    'is_active': Boolean,
    'membership_duration': Int64,
    'summary_embedding': Array(Float32, shape=(128,)),
  })
# ---
# name: TestSequencePool.test_static_data_schema[datetime-state]
  dict({
    'age': Int64,
    'group': String,
    'id': Int64,
    'is_active': Boolean,
    'membership_duration': Int64,
    'summary_embedding': Array(Float32, shape=(128,)),
  })
# ---
# name: TestSequencePool.test_static_data_schema[timestep-event]
  dict({
    'age': Int64,
    'group': String,
    'id': Int64,
    'is_active': Boolean,
    'membership_duration': Int64,
    'summary_embedding': Array(Float32, shape=(128,)),
  })
# ---
# name: TestSequencePool.test_static_data_schema[timestep-interval]
  dict({
    'age': Int64,
    'group': String,
    'id': Int64,
    'is_active': Boolean,
    'membership_duration': Int64,
    'summary_embedding': Array(Float32, shape=(128,)),
  })
# ---
# name: TestSequencePool.test_static_data_schema[timestep-state]
  dict({
    'age': Int64,
    'group': String,
    'id': Int64,
    'is_active': Boolean,
    'membership_duration': Int64,
    'summary_embedding': Array(Float32, shape=(128,)),
  })
# ---
# name: TestSequencePool.test_unique_ids[datetime-event]
  list([
    1,
    2,
    3,
    4,
    5,
  ])
# ---
# name: TestSequencePool.test_unique_ids[datetime-interval]
  list([
    1,
    2,
    3,
    4,
    5,
  ])
# ---
# name: TestSequencePool.test_unique_ids[datetime-state]
  list([
    1,
    2,
    3,
    4,
    5,
  ])
# ---
# name: TestSequencePool.test_unique_ids[timestep-event]
  list([
    1,
    2,
    3,
    4,
    5,
  ])
# ---
# name: TestSequencePool.test_unique_ids[timestep-interval]
  list([
    1,
    2,
    3,
    4,
    5,
  ])
# ---
# name: TestSequencePool.test_unique_ids[timestep-state]
  list([
    1,
    2,
    3,
    4,
    5,
  ])
# ---
# name: TestTrajectory.test_sub_temporal_data[datetime]
  shape: (8, 10)
  ┌─────────────┬─────────────┬────────────┬─────┬───┬────────────┬─────────┬────────────┬───────────┐
  │ duration    ┆ end         ┆ flag_valid ┆ id  ┆ … ┆ start      ┆ status  ┆ token_emb  ┆ value     │
  │ ---         ┆ ---         ┆ ---        ┆ --- ┆   ┆ ---        ┆ ---     ┆ ---        ┆ ---       │
  │ i64         ┆ datetime[μs ┆ bool       ┆ i64 ┆   ┆ datetime[μ ┆ str     ┆ array[f32, ┆ f64       │
  │             ┆ ]           ┆            ┆     ┆   ┆ s]         ┆         ┆ 32]        ┆           │
  ╞═════════════╪═════════════╪════════════╪═════╪═══╪════════════╪═════════╪════════════╪═══════════╡
  │ 15551990000 ┆ 2000-10-22  ┆ false      ┆ 1   ┆ … ┆ 2000-10-05 ┆ warn    ┆ [0.215175, ┆ 0.541712  │
  │ 00          ┆ 23:59:59    ┆            ┆     ┆   ┆ 00:00:00   ┆         ┆ 0.725006,  ┆           │
  │             ┆             ┆            ┆     ┆   ┆            ┆         ┆ … 0.24879… ┆           │
  │ 22463990000 ┆ 2000-11-07  ┆ true       ┆ 1   ┆ … ┆ 2000-10-13 ┆ pending ┆ [0.539233, ┆ -1.0729   │
  │ 00          ┆ 23:59:59    ┆            ┆     ┆   ┆ 00:00:00   ┆         ┆ 0.594354,  ┆           │
  │             ┆             ┆            ┆     ┆   ┆            ┆         ┆ … 0.02286… ┆           │
  │ 20735990000 ┆ 2000-11-17  ┆ true       ┆ 1   ┆ … ┆ 2000-10-25 ┆ error   ┆ [0.830483, ┆ -0.208379 │
  │ 00          ┆ 23:59:59    ┆            ┆     ┆   ┆ 00:00:00   ┆         ┆ 0.678199,  ┆           │
  │             ┆             ┆            ┆     ┆   ┆            ┆         ┆ … 0.29341… ┆           │
  │ 24191990000 ┆ 2000-11-27  ┆ true       ┆ 1   ┆ … ┆ 2000-10-31 ┆ ok      ┆ [0.193563, ┆ 0.169945  │
  │ 00          ┆ 23:59:59    ┆            ┆     ┆   ┆ 00:00:00   ┆         ┆ 0.382689,  ┆           │
  │             ┆             ┆            ┆     ┆   ┆            ┆         ┆ … 0.78663… ┆           │
  │ 20735990000 ┆ 2000-12-22  ┆ true       ┆ 1   ┆ … ┆ 2000-11-29 ┆ error   ┆ [0.375618, ┆ -0.73353  │
  │ 00          ┆ 23:59:59    ┆            ┆     ┆   ┆ 00:00:00   ┆         ┆ 0.210704,  ┆           │
  │             ┆             ┆            ┆     ┆   ┆            ┆         ┆ … 0.91522… ┆           │
  │ 18143990000 ┆ 2000-12-24  ┆ true       ┆ 1   ┆ … ┆ 2000-12-04 ┆ warn    ┆ [0.570386, ┆ -0.210655 │
  │ 00          ┆ 23:59:59    ┆            ┆     ┆   ┆ 00:00:00   ┆         ┆ 0.616262,  ┆           │
  │             ┆             ┆            ┆     ┆   ┆            ┆         ┆ … 0.02704… ┆           │
  │ 25055990000 ┆ 2001-01-07  ┆ true       ┆ 1   ┆ … ┆ 2000-12-10 ┆ warn    ┆ [0.722286, ┆ 0.676404  │
  │ 00          ┆ 23:59:59    ┆            ┆     ┆   ┆ 00:00:00   ┆         ┆ 0.234212,  ┆           │
  │             ┆             ┆            ┆     ┆   ┆            ┆         ┆ … 0.10777… ┆           │
  │ 24191990000 ┆ 2001-02-04  ┆ true       ┆ 1   ┆ … ┆ 2001-01-08 ┆ error   ┆ [0.585045, ┆ -1.317823 │
  │ 00          ┆ 23:59:59    ┆            ┆     ┆   ┆ 00:00:00   ┆         ┆ 0.183505,  ┆           │
  │             ┆             ┆            ┆     ┆   ┆            ┆         ┆ … 0.66307… ┆           │
  └─────────────┴─────────────┴────────────┴─────┴───┴────────────┴─────────┴────────────┴───────────┘
# ---
# name: TestTrajectory.test_sub_temporal_data[timestep]
  shape: (8, 9)
  ┌───────────┬────────────┬────────────┬─────┬───┬───────┬─────────┬────────────────┬───────────┐
  │ duration  ┆ end        ┆ flag_valid ┆ id  ┆ … ┆ start ┆ status  ┆ token_emb      ┆ value     │
  │ ---       ┆ ---        ┆ ---        ┆ --- ┆   ┆ ---   ┆ ---     ┆ ---            ┆ ---       │
  │ f64       ┆ f64        ┆ bool       ┆ i64 ┆   ┆ f64   ┆ str     ┆ array[f32, 32] ┆ f64       │
  ╞═══════════╪════════════╪════════════╪═════╪═══╪═══════╪═════════╪════════════════╪═══════════╡
  │ 17.999988 ┆ 295.999988 ┆ false      ┆ 1   ┆ … ┆ 278.0 ┆ pending ┆ [0.764766,     ┆ -1.463386 │
  │           ┆            ┆            ┆     ┆   ┆       ┆         ┆ 0.52712, …     ┆           │
  │           ┆            ┆            ┆     ┆   ┆       ┆         ┆ 0.126464…      ┆           │
  │ 25.999988 ┆ 311.999988 ┆ true       ┆ 1   ┆ … ┆ 286.0 ┆ pending ┆ [0.356086,     ┆ 1.645544  │
  │           ┆            ┆            ┆     ┆   ┆       ┆         ┆ 0.61515, …     ┆           │
  │           ┆            ┆            ┆     ┆   ┆       ┆         ┆ 0.074617…      ┆           │
  │ 23.999988 ┆ 321.999988 ┆ true       ┆ 1   ┆ … ┆ 298.0 ┆ warn    ┆ [0.45854,      ┆ -0.569401 │
  │           ┆            ┆            ┆     ┆   ┆       ┆         ┆ 0.092267, …    ┆           │
  │           ┆            ┆            ┆     ┆   ┆       ┆         ┆ 0.230326…      ┆           │
  │ 27.999988 ┆ 331.999988 ┆ true       ┆ 1   ┆ … ┆ 304.0 ┆ pending ┆ [0.951114,     ┆ 0.199385  │
  │           ┆            ┆            ┆     ┆   ┆       ┆         ┆ 0.319548, …    ┆           │
  │           ┆            ┆            ┆     ┆   ┆       ┆         ┆ 0.13458…       ┆           │
  │ 23.999988 ┆ 356.999988 ┆ true       ┆ 1   ┆ … ┆ 333.0 ┆ pending ┆ [0.333197,     ┆ 0.248016  │
  │           ┆            ┆            ┆     ┆   ┆       ┆         ┆ 0.48291, …     ┆           │
  │           ┆            ┆            ┆     ┆   ┆       ┆         ┆ 0.918873…      ┆           │
  │ 20.999988 ┆ 358.999988 ┆ true       ┆ 1   ┆ … ┆ 338.0 ┆ warn    ┆ [0.062638,     ┆ 0.041294  │
  │           ┆            ┆            ┆     ┆   ┆       ┆         ┆ 0.124422, …    ┆           │
  │           ┆            ┆            ┆     ┆   ┆       ┆         ┆ 0.87622…       ┆           │
  │ 28.999988 ┆ 372.999988 ┆ false      ┆ 1   ┆ … ┆ 344.0 ┆ error   ┆ [0.676314,     ┆ 0.430945  │
  │           ┆            ┆            ┆     ┆   ┆       ┆         ┆ 0.504547, …    ┆           │
  │           ┆            ┆            ┆     ┆   ┆       ┆         ┆ 0.43409…       ┆           │
  │ 27.999988 ┆ 400.999988 ┆ true       ┆ 1   ┆ … ┆ 373.0 ┆ ok      ┆ [0.956934,     ┆ -0.882414 │
  │           ┆            ┆            ┆     ┆   ┆       ┆         ┆ 0.362068, …    ┆           │
  │           ┆            ┆            ┆     ┆   ┆       ┆         ┆ 0.59380…       ┆           │
  └───────────┴────────────┴────────────┴─────┴───┴───────┴─────────┴────────────────┴───────────┘
# ---
# name: TestTrajectoryPool.test_len[datetime]
  60
# ---
# name: TestTrajectoryPool.test_len[timestep]
  60
# ---
# name: TestTrajectoryPool.test_unique_ids[datetime]
  list([
    1,
    2,
    3,
    4,
    5,
  ])
# ---
# name: TestTrajectoryPool.test_unique_ids[timestep]
  list([
    1,
    2,
    3,
    4,
    5,
  ])
# ---
